--- a/views/pages/registration.ejs
+++ b/views/pages/registration.ejs
@@ -1,3 +1,4 @@
+
 <Html>
     <head> 
     <title>
@@ -6,30 +7,36 @@
     </head>
     <br>
     <br>
-    <body>
+    <body><center>
     <form>
-    
-    <label> Name </label>
-    <input type="text" name="name" size="15"/> <br> <br>
-    
+    <h1>Registration Page</h1>
+    <!-- <label> Name </label>
+    <input type="text" name="name" value="user.displayName" size="15"/> <br> <br> -->
+    <p>
+        <strong>Name</strong>: "<%= user.displayName%>"
+        <strong>Email</strong>: "<%= user.emails[0].value %>"<br>
+      </p>
+      <br><br>
     <label> Branch </label>
     <input type="text" name="branch" size="15"/> <br> <br>
+    <!-- <label> Email </label>
+    <input type="text" name="email" value="user.emails[0].value" size="15"/> <br> <br> -->
     
     <label> Year </label> 
     <input type="text" name="year" size="15"/> <br> <br>
     
     <label> Student Number </label>
-    <input type="text" name="sNumber" size="15"/> <br> <br>
+    <input type="text" name="student_number" size="15"/> <br> <br>
     
     <label> Roll Number </label>
-    <input type="text" name="rNumber" size="15"/> <br> <br>
-    
+    <input type="text" name="student_roll" size="15"/> <br> <br>
     <br> <br>
     Question
     <br>
     <textarea cols="80" rows="5" value="Question">
 
 </textarea>
+<center>
 </body>
 </form>
 </Html>        
